--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -1,4 +1,4 @@
-name: Build macOS Application
+name: Build macOS Apps (Separate Architectures)
 
 on:
   push:
@@ -7,156 +7,138 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-arm64:
-    name: Build ARM64 (Apple Silicon)
-    runs-on: macos-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pyinstaller
-    
-    - name: Build ARM64 application
-      run: |
-        BUILD_NAME="CloudflareScan_arm64"
-        
-        echo "Building Apple Silicon (ARM64) version..."
-        
-        python -m PyInstaller --onefile --windowed \
-          --name $BUILD_NAME \
-          --icon=cfs.icns \
-          --add-data "cfs.icns:." \
-          cfs-mac.py
-        
-        echo "=== 验证ARM64构建 ==="
-        if [ -d "dist/$BUILD_NAME.app" ]; then
-          echo "✓ ARM64应用包创建成功"
-        fi
-    
-    - name: Create ARM64 DMG
-      if: success()
-      run: |
-        brew install create-dmg
-        BUILD_NAME="CloudflareScan_arm64"
-        DMG_NAME="CloudflareScan_arm64.dmg"
-        
-        create-dmg \
-          --volname "CloudflareScan" \
-          --volicon "cfs.icns" \
-          --window-pos 200 120 \
-          --window-size 800 400 \
-          --icon-size 100 \
-          --icon "$BUILD_NAME.app" 200 190 \
-          --hide-extension "$BUILD_NAME.app" \
-          --app-drop-link 600 185 \
-          "$DMG_NAME" \
-          "dist/"
-    
-    - name: Upload ARM64 artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: CloudflareScan-arm64
-        path: |
-          dist/CloudflareScan_arm64.app
-          CloudflareScan_arm64.dmg
-        retention-days: 7
-
   build-x86_64:
-    name: Build x86_64 (Intel)
+    name: Build x86_64 (Intel) Version
     runs-on: macos-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Install Homebrew for x86_64
-      run: |
-        # 安装x86_64版本的Homebrew
-        arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        echo 'eval "$(/usr/local/bin/brew shellenv)"' >> ~/.zprofile
-        eval "$(/usr/local/bin/brew shellenv)"
-    
-    - name: Install Python 3.10 for x86_64
-      run: |
-        # 使用x86_64 Homebrew安装x86_64 Python
-        arch -x86_64 /usr/local/bin/brew install python@3.10
-        echo "Python安装完成"
-        /usr/local/opt/python@3.10/bin/python3 --version
-    
-    - name: Install x86_64 dependencies
-      run: |
-        # 使用x86_64 Python安装依赖
-        /usr/local/opt/python@3.10/bin/python3 -m pip install --upgrade pip
-        /usr/local/opt/python@3.10/bin/pip3 install -r requirements.txt
-        /usr/local/opt/python@3.10/bin/pip3 install pyinstaller
-        
-        # 验证依赖的架构
-        echo "=== 验证依赖架构 ==="
-        find /usr/local/opt/python@3.10/lib/python3.10/site-packages -name "*.so" -exec file {} \; | head -5
-    
-    - name: Build x86_64 application
-      run: |
-        BUILD_NAME="CloudflareScan_x86_64"
-        
-        echo "Building Intel (x86_64) version..."
-        echo "当前架构: $(uname -m)"
-        echo "Python路径: $(which python3)"
-        
-        # 使用x86_64 Python和PyInstaller构建
-        /usr/local/opt/python@3.10/bin/python3 -m PyInstaller --onefile --windowed \
-          --name $BUILD_NAME \
-          --icon=cfs.icns \
-          --add-data "cfs.icns:." \
-          cfs-mac.py
-        
-        echo "=== 验证x86_64构建 ==="
-        if [ -d "dist/$BUILD_NAME.app" ]; then
-          echo "✓ x86_64应用包创建成功"
-          # 检查二进制文件的架构
-          if [ -f "dist/$BUILD_NAME.app/Contents/MacOS/$BUILD_NAME" ]; then
-            echo "文件架构:"
-            file "dist/$BUILD_NAME.app/Contents/MacOS/$BUILD_NAME"
-            echo "支持的架构:"
-            lipo -archs "dist/$BUILD_NAME.app/Contents/MacOS/$BUILD_NAME" 2>/dev/null || true
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python for x86_64
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies and build for x86_64
+        run: |
+          arch -x86_64 /bin/bash -c "
+            python -m venv venv_x86
+            source venv_x86/bin/activate
+            pip install --upgrade pip setuptools wheel
+            if [ -f requirements.txt ]; then
+              pip install -r requirements.txt
+            else
+              pip install PyInstaller PySide6 aiohttp
+            fi
+            python -m PyInstaller \
+              --windowed \
+              --name CloudflareScan_x86_64 \
+              --icon=cfs.icns \
+              --add-data 'cfs.icns:.' \
+              --hidden-import=asyncio \
+              --hidden-import=aiohttp \
+              --hidden-import=PySide6.QtCore \
+              --hidden-import=PySide6.QtGui \
+              --hidden-import=PySide6.QtWidgets \
+              cfs-mac.py
+          "
+      - name: Create DMG for x86_64
+        run: |
+          brew install create-dmg
+          
+          create-dmg \
+            --volname "CloudflareScan (Intel)" \
+            --volicon "cfs.icns" \
+            --window-pos 200 120 \
+            --window-size 800 400 \
+            --icon-size 100 \
+            --icon "CloudflareScan_x86_64.app" 200 190 \
+            --hide-extension "CloudflareScan_x86_64.app" \
+            --app-drop-link 600 185 \
+            "CloudflareScan_Intel.dmg" \
+            "dist/"
+      - name: Upload x86_64 artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: CloudflareScan-x86_64
+          path: |
+            dist/CloudflareScan_x86_64.app
+            CloudflareScan_Intel.dmg
+          retention-days: 7
+
+  build-arm64:
+    name: Build arm64 (Apple Silicon) Version
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python for arm64
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies and build for arm64
+        run: |
+          python -m venv venv_arm
+          source venv_arm/bin/activate
+          pip install --upgrade pip setuptools wheel
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install PyInstaller PySide6 aiohttp
           fi
-        else
-          echo "✗ 应用包创建失败"
-          ls -la dist/
-        fi
-    
-    - name: Create x86_64 DMG
-      if: success()
-      run: |
-        brew install create-dmg
-        BUILD_NAME="CloudflareScan_x86_64"
-        DMG_NAME="CloudflareScan_x86_64.dmg"
-        
-        create-dmg \
-          --volname "CloudflareScan" \
-          --volicon "cfs.icns" \
-          --window-pos 200 120 \
-          --window-size 800 400 \
-          --icon-size 100 \
-          --icon "$BUILD_NAME.app" 200 190 \
-          --hide-extension "$BUILD_NAME.app" \
-          --app-drop-link 600 185 \
-          "$DMG_NAME" \
-          "dist/"
-    
-    - name: Upload x86_64 artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: CloudflareScan-x86_64
-        path: |
-          dist/CloudflareScan_x86_64.app
-          CloudflareScan_x86_64.dmg
-        retention-days: 7
+          python -m PyInstaller \
+            --windowed \
+            --name CloudflareScan_arm64 \
+            --icon=cfs.icns \
+            --add-data 'cfs.icns:.' \
+            --hidden-import=asyncio \
+            --hidden-import=aiohttp \
+            --hidden-import=PySide6.QtCore \
+            --hidden-import=PySide6.QtGui \
+            --hidden-import=PySide6.QtWidgets \
+            cfs-mac.py
+      - name: Create DMG for arm64
+        run: |
+          brew install create-dmg
+          
+          create-dmg \
+            --volname "CloudflareScan (Apple Silicon)" \
+            --volicon "cfs.icns" \
+            --window-pos 200 120 \
+            --window-size 800 400 \
+            --icon-size 100 \
+            --icon "CloudflareScan_arm64.app" 200 190 \
+            --hide-extension "CloudflareScan_arm64.app" \
+            --app-drop-link 600 185 \
+            "CloudflareScan_AppleSilicon.dmg" \
+            "dist/"
+      - name: Upload arm64 artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: CloudflareScan-arm64
+          path: |
+            dist/CloudflareScan_arm64.app
+            CloudflareScan_AppleSilicon.dmg
+          retention-days: 7
+
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: [build-x86_64, build-arm64]
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Download both artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release-artifacts
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            release-artifacts/CloudflareScan-x86_64/CloudflareScan_Intel.dmg
+            release-artifacts/CloudflareScan-arm64/CloudflareScan_AppleSilicon.dmg
+          draft: false
+          prerelease: false
